# nanochat-desktop

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PHASE3_PLAN.md  README.md  THINKING_WIDGET_ISSUES.md  THINKING_WIDGET_SETUP.md  appimagebuilder.yml  build_appimage_proper.sh  build_flatpak.sh  com.nanochat.desktop.desktop  com.nanochat.desktop.json  create_release.sh  create_release_0.3.1.sh  icon.jpg.bak  nanochat_full_plan.md  pyproject.toml  upload_flatpak.sh  upload_flatpak_0.3.1.sh
nanochat/: config.py  constants.py  main.py
nanochat/api/: __init__.py  client.py  exceptions.py  model_cache.py  models.py
nanochat/data/: __init__.py  database.py  models.py  repository.py
nanochat/data/migrations/: v1_initial.py  v2_add_web_search_pref.py  v3_add_suggested_prompts.py
nanochat/state/: __init__.py  app_state.py  conversation_mode.py
nanochat/ui/: __init__.py  action_bar.py  chat_view.py  header_bar.py  main_window.py  project_dialog.py  settings_dialog.py  sidebar.py  suggested_prompts.py  thinking_widget.py
nanochat/ui/resources/: style.css
rust/: Cargo.toml
rust/src/: lib.rs
